# dspaces

./: CMakeLists.txt  COPYRIGHT
bindings/: CMakeLists.txt
bindings/fortran/: dspaces_f2c.c  dspaces_mod.f90
cmake/: FindFabric.cmake  FindGDRCOPY.cmake  FindNetCDF.cmake  OpenVisusConfig.cmake
examples/: CMakeLists.txt
examples/ex1_pgas_put/: put.c
examples/ex1_pgas_put_get/: CMakeLists.txt  get.c  put.c
examples/ex1_put_get/: get.c  put.c
examples/ex1_putget/: get.c  put.c
examples/ex2_transpose/: CMakeLists.txt  cache_hit.c  hybrid_cache_hit.c  transpose.c  transpose_1o.c  transpose_mo.c  transpose_mso.c  transpose_so.c
include/: bbox.h  dspaces-client.h  dspaces-common.h  dspaces.h  gspace.h  idx1_wrapper.h  idx_wrapper.h  memory.h  netcdf_wrapper.h  ss_data.h  util.h
pgas_extension/: CMakeLists.txt
pgas_extension/examples/: CMakeLists.txt  put.c
pgas_extension/include/: dspaces_pgas_client.h  pgas_bbox.h  pgas_ss_data.h
pgas_extension/src/: CMakeLists.txt  dspaces_pgas_client.c  dspaces_pgas_server.c  pgas_bbox.c  pgas_ss_data.c
src/: CMakeLists.txt  bbox.c  dspaces-client.c  dspaces-server.c  idx1_wrapper.cpp  idx_wrapper.cpp  memory.c  netcdf.c  netcdf_wrapper.c  ss_data.c  ssd_copy.cu
tests/: CMakeLists.txt  server.c  terminator.c  test_get_idx1.c  test_get_netcdf.c  test_get_run.c  test_reader.f90  test_sub_run.c  test_writer.c  test_writer.f90
